--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
+atomicwrites==1.4.0
+attrs==21.2.0
 beautifulsoup4==4.9.3
 certifi==2021.5.30
 chardet==4.0.0
+colorama==0.4.4
 idna==2.10
+iniconfig==1.1.1
 lxml==4.6.3
 more-itertools==8.8.0
+packaging==20.9
+pluggy==0.13.1
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.4
 requests==2.25.1
 soupsieve==2.2.1
+toml==0.10.2
 urllib3==1.26.5
