--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ dist
 dist/
 wikisearcher.egg-info
 wikisearcher.egg-info/
+src/wikipedia_searcher.egg-info/
+src/wikipedia_searcher.egg-info
+src/wikipedia_searcher.egg-info
